# notivication_service

./: .env-test  .gitignore  Dockerfile  README.md  alembic.ini  old_pyproject  pyproject.toml  requirements.txt
src/: config.py  database.py  exceptions.py  init.py  main.py
src/api/: auth.py  dependencies.py  notifications.py
src/connectors/: redis_connector.py
src/migration/: env.py
src/migration/versions/: 2025_10_23_0033-729d3a813342_initial_revision_and_db_auth.py  2025_10_31_1817-8339df6a6eb9_create_templates.py  2025_11_06_2111-13435a8c1819_add_notification_logs.py  2025_11_07_2057-ae1df5d1bc40_cnange_logs_unit_template_key.py
src/models/: auth.py  notification_logs.py  templates.py  utils.py
src/repositories/: auth.py  base.py  notification_logs.py  notifications.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: auth.py  notification_logs.py  templates.py
src/services/: auth.py  base.py  templates.py
src/tasks/: tasks.py  utils.py
src/utils/: db_manager.py  tg_bot.py
tests/: conftest.py  mock_auth.json
tests/integation_tests/users/: test_api.py
tests/unit_tests/: test_auth.py
