[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["fodui"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"  
fastapi = ">=0.119.1,<0.120.0"
sqlalchemy = ">=2.0.44,<3.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
pydantic = {version = "2.11.0", extras = ["email"]}
uvicorn = ">=0.38.0,<0.39.0"
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.17.0,<2.0.0"
passlib = ">=1.7.4,<2.0.0"
bcrypt = "==4.3.0"
pyjwt = ">=2.10.1,<3.0.0"
redis = ">=7.0.1,<8.0.0"
fastapi-cache2 = ">=0.2.2,<0.3.0"
celery = "^5.5.3"
aiogram = "^3.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "==8.4.2"
pytest-asyncio = ">=1.2.0,<2.0.0"
pytest-dotenv = ">=0.5.2,<0.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"